# Glyphgen

./: .gitignore  Cargo.toml  Plan.md  README.md  unicode_output.ansi  unicode_output.html  unicode_output.txt
.github/workflows/: ci.yml
benches/: rendering.rs
src/: color_space.rs  config.rs  image_loader.rs  input.rs  lib.rs  main.rs  perf_monitor.rs  state.rs  terminal_capabilities.rs  unicode_handler.rs  worker.rs
src/render_engines/: ascii.rs  mod.rs  text_stylizer.rs  unicode.rs
src/ui/: help.rs  mod.rs  preview.rs  widgets.rs
tests/: integration_tests.rs
